@@ -725,6 +725,9 @@ char *event_name(enum gaim_event event)
 	case event_draw_menu:
 		sprintf(buf, "event_draw_menu");
 		break;
+	case event_im_displayed:
+		sprintf(buf, "event_im_displayed");
+		break;
 	default:
 		sprintf(buf, "event_unknown");
 		break;
@@ -777,6 +780,7 @@ int plugin_event(enum gaim_event event, void *arg1, void *arg2, void *arg3, void
 
 				/* struct gaim_connection *, char *, char ** */
 			case event_im_send:
+			case event_im_displayed:
 			case event_chat_send:
 				{
 					void (*function)(struct gaim_connection *, char *, char **,
@@ -952,6 +956,11 @@ int plugin_event(enum gaim_event event, void *arg1, void *arg2, void *arg3, void
 		break;
 	case event_draw_menu:
 		g_snprintf(buf, sizeof buf, "\"%s\"", (char *)arg2);
+		break;
+	case event_im_displayed:
+		g_snprintf(buf, sizeof buf, "\"%s\" \"%s\" %s",
+			   ((struct gaim_connection *)arg1)->username, (char *)arg2,
+			   (char *)arg3 ? (char *)arg3 : "(null)");
 		break;
 	default:
 		break;
